src/kube/13-app1-nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
  labels: 
    app: nginx-app1
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      name: nginx-app1
      labels:
        app: nginx-app1
    spec:
      containers:
        - image: stacksimplify/kube-nginxapp1:1.0.0
          name: app1
          ports:
          - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"


---

apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-service
  namespace: test
  annotations:     
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: nginx-app1
  ports:
  - port:  80
    targetPort:  80
