src/kube/13-app3-nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app3
  labels: 
    app: nginx-app3
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app3
  template:
    metadata:
      name: nginx-app3
      labels:
        app: nginx-app3
    spec:
      containers:
        - image: stacksimplify/kubenginx:1.0.0
          name: app1
          ports:
          - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"


---

apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-service
  namespace: test
  annotations:     
    alb.ingress.kubernetes.io/healthcheck-path: /app3/index.html
spec:
  type: NodePort
  selector:
    app: nginx-app3
  ports:
  - port:  80
    targetPort:  80
