src/kube/14-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: nginx-app
  ports:
  - port:  80
    targetPort:  80
